tests/fixtures/fail/qualified_method_missing_receiver.sc
let Number = struct { value: i32 }

extend Number {
  let read(borrow self)(): i32 = { self.value }
}

let main(): i32 = { Number.read()() }
